<resources>
    <string name="app_name">Infinity Screen</string>

    <!-- Common -->
    <string name="continue_button">Continue</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="preview">Preview</string>
    <string name="play">Play</string>

    <!-- Placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="device_name_1">Galaxy A3 (2017)</string>
    <string name="device_name_2">HUAWEI CUN-L01_2E25</string>

    <!-- Home Fragment -->
    <string name="home_heading">View your favorite images and videos with your friends!</string>
    <string name="home_find_devices">Find Devices</string>
    <string name="home_wait_for_invite">...or wait until you get invited.</string>

    <!-- Device Statuses -->
    <string name="host">Host</string>
    <string name="device_status_available">Available</string>
    <string name="device_status_invited">Invited</string>
    <string name="device_status_connected">Connected</string>
    <string name="device_status_failed">Failed</string>
    <string name="device_status_unavailable">Unavailable</string>
    <string name="device_status_unknown">Unknown</string>

    <!-- Connected Fragment -->
    <string name="connected_to">Connected to</string>
    <string name="connected_wait">Waiting for all devices to connect.</string>

    <!-- Device List Fragment -->
    <string name="list_available">Available devices</string>
    <string name="list_connected">Connected devices:</string>
    <string name="list_devices_empty">No devices found</string>

    <!-- Layout Fragment -->
    <string name="layout_instructions">Please arrange your devices following the proposed layout.</string>
    <string name="layout_your_device">Your device:</string>
    <string name="layout_reset">Reset layout</string>

    <!-- Preview Fragment -->
    <string name="preview_reset_self">Reset position and scale</string>

    <!-- File Selection Fragment -->
    <string name="files_instruction">Select the media files you want to view.</string>
    <string name="files_select">Select Files</string>
    <string name="files_clear_all">Clear All</string>
    <string name="files_empty">No files selected</string>

    <!-- File Selection Wait Fragment -->
    <string name="wait_file_selection">Waiting for the host to select files.</string>

    <!-- Play Fragment -->
    <string name="play_buffering_message">Waiting for content to load.</string>
    <string name="play_back_to_file_selection">Back to files</string>
    <string name="play_error_latency">Playing video failed! Message latency too high.</string>
    <string name="play_error_accelerometer_missing">Activating accelerometer failed! Could not find sensor.</string>
    <string name="play_activate_accelerometer">React to movements</string>
    <string name="play_deactivate_accelerometer">Ignore movements</string>
    <string name="play_reset_self">Reset position</string>

    <!-- Dialogs -->
    <string name="dialog_ok">OK</string>
    <string name="dialog_finish_title">App will not work</string>
    <string name="dialog_finish_closing">The application will close.</string>
    <string name="dialog_settings_title">Adjust system settings</string>
    <string name="dialog_settings_wifi">Please turn on WiFi to proceed.</string>
    <string name="dialog_settings_gps">Please turn on GPS to proceed.</string>

</resources>