<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/option_activate_accelerometer"
        android:title="@string/play_activate_accelerometer"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/option_deactivate_accelerometer"
        android:title="@string/play_deactivate_accelerometer"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/option_file_selection"
        android:title="@string/play_back_to_file_selection"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/option_disconnect"
        android:title="@string/disconnect"
        app:showAsAction="never"
        />
</menu>