<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

<!-- Top App Bar -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/top_app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_app_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/app_name"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            />

    </com.google.android.material.appbar.AppBarLayout>

<!-- Device Card -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/device_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="?attr/colorDeviceAvailable"
        app:layout_constraintTop_toBottomOf="@id/top_app_bar_layout"
        app:layout_constraintStart_toStartOf="parent"
        >

        <LinearLayout
            android:id="@+id/device_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/StatusCardLayout"
            >

            <TextView
                android:id="@+id/device_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/device_name_2"
                android:textColor="?attr/colorOnDeviceAvailable"
                />

            <TextView
                android:id="@+id/device_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/device_status_available"
                android:textColor="?attr/colorOnDeviceAvailable"
                />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

<!-- Host Card -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/host_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="?attr/colorNeutral"
        app:layout_constraintTop_toBottomOf="@id/top_app_bar_layout"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <LinearLayout
            android:id="@+id/host_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/StatusCardLayout"
            android:gravity="end"
            >

            <TextView
                android:id="@+id/host_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/device_name_1"
                android:textColor="?attr/colorOnNeutral"
                />

            <TextView
                android:id="@+id/host_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/host"
                android:textColor="?attr/colorOnNeutral"
                />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>