<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="@dimen/vertical_margin_tiny"
    app:cardBackgroundColor="?attr/colorDeviceAvailable"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_element_padding"
        >

        <TextView
            android:id="@+id/device_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/device_name_1"
            android:textColor="?attr/colorOnDeviceAvailable"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/device_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_status_available"
            android:textColor="?attr/colorOnDeviceAvailable"
            app:layout_constraintTop_toBottomOf="@id/device_name"
            app:layout_constraintStart_toStartOf="parent"
            />

        <Button
            android:id="@+id/action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect"
            style="@style/SecondaryButton"
            app:layout_constraintTop_toTopOf="@id/device_name"
            app:layout_constraintBottom_toBottomOf="@id/device_status"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>