<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".connection.ConnectedFragment"
    style="@style/FragmentWithBackground">

    <include
        android:id="@+id/app_bar_and_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/app_bar_and_status"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        style="@style/ContentLayoutStyle"
        app:layout_constraintTop_toBottomOf="@id/app_bar_and_status"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <TextView
            android:id="@+id/connected_to_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connected_to"
            style="@style/TextOnBackgroundRegular"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/vertical_margin_extra_large"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/host_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/device_name_1"
            style="@style/TextOnBackgroundLarge"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/default_vertical_margin"
            app:layout_constraintTop_toBottomOf="@id/connected_to_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/wait_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connected_wait"
            style="@style/TextOnBackgroundRegular"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/vertical_margin_extra_large"
            app:layout_constraintTop_toBottomOf="@id/host_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:indicatorColor="?attr/colorOnBackground"
            android:layout_marginTop="@dimen/default_vertical_margin"
            app:layout_constraintTop_toBottomOf="@id/wait_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <Button
            android:id="@+id/disconnect_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disconnect"
            style="@style/NegativeButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>