<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".connection.HomeFragment"
    style="@style/FragmentWithBackground"
    >

    <include
        android:id="@+id/app_bar_and_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/app_bar_and_status"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        style="@style/ContentLayoutStyle"
        app:layout_constraintTop_toBottomOf="@id/app_bar_and_status"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <TextView
            android:id="@+id/heading_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_heading"
            style="@style/TextOnBackgroundLarge"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/vertical_margin_extra_large"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <Button
            android:id="@+id/find_devices_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_find_devices"
            style="@style/PrimaryButton"
            app:layout_constraintTop_toBottomOf="@id/heading_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/wait_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_wait_for_invite"
            style="@style/TextOnBackgroundRegular"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/default_vertical_margin"
            app:layout_constraintTop_toBottomOf="@id/find_devices_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>